--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
 				<div class="contenedor-carousel">
 					<div class="carousel">
 						<div class="pelicula">
-							<a href="https://www.instagram.com/Ian.brown94of/" target="_blank"><img src="img/instaa.png" alt=""></a>
+							<a href="https://www.instagram.com/Ian.brown94of/" target="_blank"><img src="img/insta.png" alt=""></a>
 						</div>
 						<div class="pelicula">
 							<a href="https://twitter.com/ian_brown9" target="_blank"><img src="img/x.png" alt=""></a>
 						</div>
 						<div class="pelicula">
-							<a href="https://onlyfans.com/ian.brown" target="_blank"><img src="img/only.png" alt=""></a>
+							<a href="https://onlyfans.com/ian.brown" target="_blank"><img src="img/onlyfans.png" alt=""></a>
 						</div>
 						<div class="pelicula">
 							<a href="https://t.me/+0vW4uYeLdtw3OGI0" target="_blank"><img src="img/telegram.png" alt=""></a>
